<resources>
    <string name="app_name">Scanner</string>
    <string name="search">Поиск</string>
    <string name="mark">Марка: </string>
    <string name="diameter">Диаметр: </string>
    <string name="packing">Упаковка: </string>
    <string name="party">Партия: </string>
    <string name="melting">Плавка: </string>
    <string name="mass">Вес: </string>
    <string name="status">Статус: </string>
    <string name="nothing">Ничего не найдено</string>
    <string name="see_all">Посмотреть все</string>
    <string name="sort">Сортировка</string>
    <string name="table">Таблица</string>
    <string name="cards">Карточки</string>
    <string name="filter">Фильтр</string>
    <string name="made_by">Производитель:</string>
    <string name="to_main">На главную</string>
    <string name="no_data">Данные отсутствуют</string>
    <string name="ship">Отгрузить</string>
    <string name="except">Исключить</string>
    <string name="agent">Контр. агент</string>
    <string name="sum">Счет</string>
    <string name="receive">Принять</string>
    <string name="receiver">Приемка</string>



</resources>