<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/see_all_btn"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_above="@id/search_btn"
        android:layout_centerHorizontal="true"

        android:text="@string/see_all"
        />

    <Button
        android:id="@+id/search_btn"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerInParent="true"

        android:layout_marginTop="10dp"

        android:text="@string/search"
        />

    <Button
        android:id="@+id/shipment_btn"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_below="@id/search_btn"
        android:layout_marginTop="10dp"

        android:text="@string/ship"
        />

    <Button
        android:id="@+id/receiver_btn"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_below="@id/shipment_btn"
        android:layout_marginTop="10dp"

        android:text="@string/receiver"
        />


</RelativeLayout>