<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="10dp"

    android:background="#AAAAAA">

    <TextView
        android:id="@+id/type"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        android:text="@string/search"
        android:textColor="@color/black"

        android:textSize="30sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mark"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"

        android:text="@string/mark"
        android:textColor="@color/black"

        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/type" />

    <TextView
        android:id="@+id/diameter"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"

        android:text="@string/diameter"
        android:textColor="@color/black"

        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mark" />

    <TextView
        android:id="@+id/packing"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"

        android:text="@string/packing"
        android:textColor="@color/black"

        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/diameter" />

    <TextView
        android:id="@+id/party"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"

        android:text="@string/party"
        android:textColor="@color/black"

        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/packing" />

    <TextView
        android:id="@+id/melting"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"

        android:text="@string/melting"
        android:textColor="@color/black"

        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/party" />

    <TextView
        android:id="@+id/mass"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"

        android:text="@string/mass"
        android:textColor="@color/black"

        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/melting" />

    <TextView
        android:id="@+id/status"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"

        android:text="@string/status"
        android:textColor="@color/black"

        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mass"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>