<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:textAllCaps="false"
        android:id="@+id/button_to_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/to_main"
        android:textSize="30sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">

        <TableRow>

            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mark"
                android:textSize="25sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/mark"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/table"
                android:textSize="25sp"
                android:textColor="@color/black" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diameter"
                android:textSize="25sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/diameter"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/table"
                android:textSize="25sp"
                android:textColor="@color/black" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/packing"
                android:textSize="25sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/packing"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/table"
                android:textSize="25sp"
                android:textColor="@color/black" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/party"
                android:textSize="25sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/party"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/table"
                android:textSize="25sp"
                android:textColor="@color/black" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/melting"
                android:textSize="25sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/melting"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/table"
                android:textSize="25sp"
                android:textColor="@color/black" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mass"
                android:textSize="25sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/mass"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/table"
                android:textSize="25sp"
                android:textColor="@color/black" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textSize="25sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/status"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/table"
                android:textSize="25sp"
                android:textColor="@color/black" />

        </TableRow>

        <TableRow>

            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/made_by"
                android:textSize="25sp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/made_by"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/table"
                android:textSize="25sp"
                android:textColor="@color/black" />

        </TableRow>

    </TableLayout>
</LinearLayout>