<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/upper_tv"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"

            android:text="@string/ship"
            android:textColor="@color/black"
            android:textSize="30sp"
        />

        <TextView
            android:id="@+id/mass"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="100dp"

            android:text="@string/mass"
            android:textColor="@color/black"
            android:textSize="20sp"
            />
    </LinearLayout>


    <EditText
        android:id="@+id/upper_etv"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        />
    <TextView
        android:id="@+id/lower_tv"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"

        android:text="@string/except"
        android:textColor="@color/black"
        android:textSize="30sp"
        />

    <EditText
        android:id="@+id/lower_etv"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        />

    <Button
        android:id="@+id/ship_btn"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:layout_marginTop="15dp"

        android:text="@string/ship"
        android:textAllCaps="false"
        android:textSize="35sp"

        />
</LinearLayout>