<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <TextView
            android:id="@+id/sort_tv"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"

            android:text="@string/sort"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

        <Spinner
            android:id="@+id/sort_spinner"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/sort_tv"

            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            />

        <TextView
            android:id="@+id/table_tv"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@id/sort_tv"
            app:layout_constraintStart_toStartOf="@id/sort_tv"

            android:layout_marginTop="10dp"

            android:text="@string/table"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switcher"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toTopOf="@id/table_tv"
            app:layout_constraintBottom_toBottomOf="@id/table_tv"
            app:layout_constraintStart_toEndOf="@id/table_tv"

            android:layout_marginStart="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toTopOf="@id/table_tv"
            app:layout_constraintBottom_toBottomOf="@id/table_tv"
            app:layout_constraintStart_toEndOf="@id/switcher"

            android:layout_marginStart="10dp"

            android:text="@string/cards"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

    <Button
        android:id="@+id/filter_btn"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="@id/sort_tv"
        app:layout_constraintBottom_toBottomOf="@id/table_tv"
        app:layout_constraintEnd_toEndOf="parent"

        android:layout_marginEnd="5dp"

        android:text="@string/filter"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/table_tv"
        app:layout_constraintStart_toStartOf="parent"

        android:layout_marginTop="10dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>